--- a/src/core/login/pages/site/site.html
+++ b/src/core/login/pages/site/site.html
@@ -15,7 +15,7 @@
 <ion-content class="core-center-view">
     <div class="box">
         <div text-center padding>
-            <img src="assets/img/login_logo.png" class="avatar-full login-logo" role="presentation">
+            <img src="assets/img/assurant_logo_horiz.jpg" class="avatar-full login-logo" role="presentation">
         </div>
         <form ion-list [formGroup]="siteForm" (ngSubmit)="connect($event, siteForm.value.siteUrl)" *ngIf="!fixedSites || fixedDisplay == 'select'">
             <!-- Form to input the site URL if there are no fixed sites. -->
